# fastapi-learning

./: pyproject.toml
01-05/: 01 pydantic test.py  02 http test.py  03 fastapi quickstart.py  04 Path operation decorator.py  05 decorator params.py
06 include router usage/: main.py
06 include router usage/apps/app01/: urls.py
06 include router usage/apps/app02/: urls.py
07 request response/: main.py
07 request response/apps/: app01.py  app02.py  app03.py  app04.py  app05.py  app06.py  app07.py
07 request response/staticpages/css/: common.css
08 template/: main.py
08 template/templates/: index.html
09 ORM/: main.py  models.py  settings.py
09 ORM/api/: student.py
09 ORM/migrations/models/: 0_20250905182252_init.py  1_20250906101657_add_teacher_fk_to_course.py
09 ORM/templates/: index.html
10 middleware/: main.py
11 CORS middleware/: index.html  main.py
