[project]
name = "fastapi-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.9.1",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.11.7",
    "python-multipart>=0.0.20",
    "tortoise-orm[aiomysql]>=0.25.1",
    "uvicorn>=0.35.0",
]
